--- a/Kompose/app/src/main/res/layout/in_queue_song_view.xml
+++ b/Kompose/app/src/main/res/layout/in_queue_song_view.xml
@@ -63,12 +63,24 @@
                     android:textColor="#000"
                     tools:text="example text of video" />
 
-                <TextView
+                <LinearLayout
                     android:id="@+id/currently_playing_seconds_length"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewHolder.item.songLengthMinSec + `, proposed by ` + viewHolder.item.proposedBy.name}"
-                    tools:text="300" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewHolder.item.songLengthMinSec}"
+                        tools:text="300" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{`, proposed by ` + viewHolder.item.proposedBy.name}"
+                        tools:text=", proposed by Kompose" />
+                </LinearLayout>
             </LinearLayout>
 
 
