--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="ch.ethz.inf.vs.kompose.view.viewmodel.MainViewModel" />
@@ -17,6 +16,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/kompose_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:elevation="4dp"
+            android:theme="@style/ToolbarStyle"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,10 +33,12 @@
             android:background="@color/greyBackground">
 
             <android.support.design.widget.TabLayout
+                app:tabMaxWidth="0dp"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
                 android:id="@+id/tabLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:tabMinWidth="90dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <android.support.design.widget.TabItem
                     android:layout_width="wrap_content"
@@ -47,29 +57,6 @@
                     android:text="@string/manual" />
 
             </android.support.design.widget.TabLayout>
-
-
-            <TextView
-                style="@style/IconButtonTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/press_help_button"
-                android:clickable="true"
-                android:focusable="true"
-                android:onClick="@{viewModel.openHistoryClicked}"
-                android:text="@string/icons_ai_database" />
-
-            <TextView
-                android:id="@+id/press_help_button"
-                style="@style/IconButtonTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:clickable="true"
-                android:focusable="true"
-                android:onClick="@{viewModel.openHelpClicked}"
-                android:text="@string/icons_ai_help" />
-
 
         </RelativeLayout>
 
