--- a/Kompose/app/src/main/res/layout/fragment_create_session.xml
+++ b/Kompose/app/src/main/res/layout/fragment_create_session.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="ch.ethz.inf.vs.kompose.view.viewmodel.MainViewModel" />
@@ -14,8 +13,8 @@
         style="@style/TextContentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:theme="@style/AppTheme"
         android:orientation="vertical">
-
 
         <TextView
             style="@style/SecondaryTextView"
