--- a/Kompose/app/src/main/res/values/styles.xml
+++ b/Kompose/app/src/main/res/values/styles.xml
@@ -1,15 +1,20 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ToolbarStyle" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:textColorSecondary">#ffffff</item>
+        <!--<item name="android:background">@color/colorPrimary</item>-->
+    </style>
+
     <!-- Secondary application theme. -->
-    <style name="KomposeTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="KomposeTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -90,7 +95,6 @@
         <item name="android:textSize">24sp</item>
         <item name="android:padding">2dp</item>
     </style>
-
 
     <style name="DefaultEditText">
         <item name="android:layout_marginStart">0pt</item>
